--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "knex": "^3.1.0",
     "pg": "^8.13.1",
+    "react-router-dom": "^6.28.0",
     "require": "^2.4.20"
   },
   "devDependencies": {
