--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "db:seed": "npx knex seed:run --knexfile src/db/knexfile.js",
     "db:seed-make": "npx knex seed:make --knexfile src/db/knexfile.js",
     "___db:reset": "npx knex migrate:rollback --all && knex migrate:latest && knex seed:run",
-    "build": "npm install && npm run db:migrate && npm run db:seed",
+    "build-only": "npm run build --prefix frontend",
+    "build": "npm install && npm run build --prefix frontend  && npm run db:migrate && npm run db:seed",
     "db:mi-se": "npm run db:migrate && npm run db:seed",
-    "start": "node ./index.js"
+    "start": "node ./index.js",
+    "nodemon": "nodemon ./index.js"
   },
   "keywords": [],
   "author": "",
