--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db:seed-make": "npx knex seed:make --knexfile src/db/knexfile.js",
     "___db:reset": "npx knex migrate:rollback --all && knex migrate:latest && knex seed:run",
     "build-only": "npm run build --prefix frontend",
-    "build": "npm install && npm run build --prefix frontend  && npm run db:migrate && npm run db:seed",
+    "build": "npm install && npm run db:migrate && npm run db:seed && npm run build --prefix frontend ",
     "db:mi-se": "npm run db:migrate && npm run db:seed",
     "start": "node ./index.js",
     "nodemon": "nodemon ./index.js"
